k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: easytravel
  labels:
    app.kubernetes.io/name: easytravel
    app.kubernetes.io/part-of: easytravel-platform
